Fix overflow scroll display

--- a/css/bootstrap-nav-wizard.css
+++ b/css/bootstrap-nav-wizard.css
@@ -2,7 +2,8 @@
   display:inline-block;
   width: 100%;
   min-height:40px;
-  overflow: scroll;
+  overflow-y: none;
+  overflow-x: auto;
   white-space: nowrap;
   cursor: all-scroll;
   padding:0.5rem 0rem;
